interact with sakura nework

--- a/components/Blog/Blog.module.scss
+++ b/components/Blog/Blog.module.scss
@@ -33,7 +33,7 @@
   font-size: 54px !important;
   line-height: 60px;
   text-align: center;
-  color: #ffffff;
+  color: var(--color-background);
   letter-spacing: -2px;
 }
 
