--- a/components/Button/Button.module.scss
+++ b/components/Button/Button.module.scss
@@ -12,14 +12,14 @@
   font-size: 15px;
   line-height: 1.25;
   font-family: Gilroy-Bold;
-  background-color: $color-accent;
-  border: 1px solid $color-hover;
+  background-color: var(--color-accent);
+  border: 1px solid var(--color-hover);
   transition: color 0.15s ease-in-out, fill 0.15s ease-in-out,
     background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
   cursor: pointer;
   border-radius: 12px;
-  color: white;
-  box-shadow: 0px 12px 36px rgba(76, 191, 122, 0.35);
+  color: var(--color-background);
+  box-shadow: 0px 12px 36px var(--btn-shadow);
   min-width: 240px;
 
   &:active {
