--- a/components/CloverDnaAndFeature/CloverDNA.module.scss
+++ b/components/CloverDnaAndFeature/CloverDNA.module.scss
@@ -7,7 +7,7 @@
   position: relative;
   padding: 102px;
   padding-bottom: 62px;
-  background: #ffffff;
+  background: var(--color-background);
   border: 1px solid rgba(0, 0, 0, 0.1);
   box-sizing: border-box;
   box-shadow: 0px 12px 30px rgba(0, 0, 0, 0.15);
@@ -89,7 +89,7 @@
   font-size: 54px;
   line-height: 60px;
   letter-spacing: -2px;
-  color: $color-text;
+  color: var(--color-text);
 
   @media (max-width: $media-lg) {
     font-size: 48px;
@@ -129,7 +129,7 @@
   padding: 42px 0;
 
   h3 {
-    color: $color-text;
+    color: var(--color-text);
     font-weight: bold;
     font-family: Gilroy-SemiBold;
     font-size: 26px;
@@ -150,7 +150,7 @@
     font-size: 18px;
     line-height: 18px;
     margin-top: 36px;
-    box-shadow: 0px 12px 36px rgba(76, 191, 122, 0.35);
+    box-shadow: 0px 12px 36px var(--btn-shadow);
   }
 
   @media (max-width: $media-lg) {
