--- a/components/GetStarted/GetStarted.module.scss
+++ b/components/GetStarted/GetStarted.module.scss
@@ -57,7 +57,7 @@
 
 .centerLogo {
   padding: 30px;
-  background: white;
+  background: var(--color-background);
   border: 1px solid rgba(0, 0, 0, 0.15);
   box-sizing: border-box;
   box-shadow: 0px 18px 36px rgba(0, 0, 0, 0.15);
@@ -103,7 +103,7 @@
   text-align: center;
   position: relative;
   letter-spacing: -2px;
-  color: $color-text;
+  color: var(--color-text);
   margin-top: 30px;
 }
 
@@ -137,7 +137,7 @@
     height: 50%;
     width: 100%;
     bottom: 0;
-    background-color: $color-text;
+    background-color: var(--color-second-background);
 
     @media (max-width: $media-sm) {
       height: 50px;
@@ -152,7 +152,7 @@
     height: 50%;
     width: 100%;
     top: 0;
-    background-color: $color-light-grey;
+    background-color: var(--color-light-grey);
     z-index: -1;
 
     @media (max-width: $media-sm) {
@@ -179,7 +179,7 @@
 
 .card {
   position: relative;
-  background: #ffffff;
+  background: var(--color-background);
   border: 1px solid rgba(0, 0, 0, 0.15);
   box-sizing: border-box;
   box-shadow: 0px 18px 36px rgba(0, 0, 0, 0.15);
@@ -194,7 +194,7 @@
     font-family: Gilroy-SemiBold;
     font-size: 26px;
     line-height: 30px;
-    color: $color-text;
+    color: var(--color-text);
     margin-bottom: 24px;
 
     @media (max-width: $media-lg) {
@@ -214,6 +214,11 @@
       & {
         display: none;
       }
+    }
+
+    path {
+      fill: var(--color-accent);
+      stroke: var(--color-accent);
     }
   }
 
