--- a/components/StrategicPartners/StrategicPartners.module.scss
+++ b/components/StrategicPartners/StrategicPartners.module.scss
@@ -13,6 +13,7 @@
   font-family: Gilroy-SemiBold;
   font-size: 54px;
   line-height: 60px;
+  color: var(--color-background);
 }
 
 .logos {
@@ -28,6 +29,9 @@
 
 .logo {
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 192px;
   height: 100px;
   float: left;
@@ -37,11 +41,17 @@
     content: '';
     position: absolute;
     border-radius: 18px;
-    background: rgba(255, 255, 255, 0.05);
+    background: var(--btn-secondary-background);
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
+    z-index: 0;
+  }
+
+  img {
+    max-height: 60px;
+    z-index: 10;
   }
 }
 
