--- a/components/Button/Button.module.scss
+++ b/components/Button/Button.module.scss
@@ -8,12 +8,11 @@
   height: 54px;
   text-align: center;
   text-decoration: none;
-  font-weight: $fw-bold;
-  font-size: 15px;
-  line-height: 1.25;
+  font-size: 18px;
+  line-height: 18px;
   font-family: Gilroy-Bold;
   background-color: var(--color-accent);
-  border: 1px solid var(--color-hover);
+  border: 1px solid rgba(0, 0, 0, 0.15);
   transition: color 0.15s ease-in-out, fill 0.15s ease-in-out,
     background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
   cursor: pointer;
@@ -21,6 +20,10 @@
   color: var(--color-background);
   box-shadow: 0px 12px 36px var(--btn-shadow);
   min-width: 240px;
+
+  &:hover {
+    background-color: var(--color-accent-light);
+  }
 
   &:active {
     transform: translateY(1px);
@@ -32,6 +35,11 @@
 
   svg {
     margin-right: 12px;
+  }
+
+  @media (max-width: $media-sm) {
+    font-size: 16px;
+    min-width: 210px;
   }
 }
 
