--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -9,6 +9,7 @@
   --color-btn: #19191f;
   --color-logo: #22d297;
   --color-accent: #42c37b;
+  --color-accent-light: #4ee591;
   --color-white: #fff;
   --color-hover: #27a577;
   --color-title: #6fcf97;
@@ -38,6 +39,7 @@
   --color-title: #6fcf97;
   --color-light-grey: #1c2833;
   --color-background: #070a0d;
+  --color-accent-light: #070a0d;
   --color-second-background: #e5e5e5;
   --btn-shadow: rgba(255, 89, 149, 0.35);
   --btn-secondary-background: #fff;
@@ -88,10 +90,6 @@ a {
   transition: color 0.25s, fill 0.25s;
   color: inherit;
   text-decoration: none;
-
-  &:hover {
-    color: $color-link;
-  }
 }
 
 button {
