--- a/components/CloverDnaAndFeature/CloverDNA.module.scss
+++ b/components/CloverDnaAndFeature/CloverDNA.module.scss
@@ -2,7 +2,7 @@
 
 .wrapper {
   max-width: 1230px;
-  width: calc(100% - 240px);
+  width: auto;
   margin: auto;
   position: relative;
   padding: 102px;
@@ -91,16 +91,29 @@
   letter-spacing: -2px;
   color: var(--color-text);
 
-  @media (max-width: $media-lg) {
+  @media (max-width: $media-md) {
     font-size: 48px;
     line-height: 54px;
+  }
+
+  @media (max-width: $media-sm) {
+    font-size: 30px;
+    line-height: 30px;
   }
 }
 
 .backImage {
   width: 100%;
   height: auto;
-  margin-top: 42px;
+  margin-top: 78px;
+
+  @media (max-width: $media-md) {
+    margin-top: 60px;
+  }
+
+  @media (max-width: $media-sm) {
+    margin-top: 48px;
+  }
 }
 
 .topContent {
@@ -126,7 +139,15 @@
   align-items: flex-start;
   justify-content: flex-start;
   text-align: left;
-  padding: 42px 0;
+  padding: 78px 0;
+
+  @media (max-width: $media-md) {
+    padding: 65px 0;
+  }
+
+  @media (max-width: $media-sm) {
+    padding: 42px 0;
+  }
 
   h3 {
     color: var(--color-text);
@@ -135,6 +156,14 @@
     font-size: 26px;
     line-height: 30px;
     margin-bottom: 24px;
+
+    @media (max-width: $media-md) {
+      margin-bottom: 21px;
+    }
+
+    @media (max-width: $media-sm) {
+      margin-bottom: 21px;
+    }
   }
 
   p {
@@ -182,27 +211,6 @@
   }
 }
 
-.featureContent {
-  max-width: 1168px;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  margin: 0 auto;
-  padding: 96px 0 50px;
-
-  & > div {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-}
-
-.featureWrapper {
-  width: 100%;
-  // background-color: #121c24;
-  // background: url('../../public/svg/clover_features_bg.png') no-repeat;
-  // background-size: cover;
-}
 .bottomWrapper {
   background: linear-gradient(98.6deg, #27a577 0.21%, #0080b9 100%),
     linear-gradient(0deg, #27a577, #27a577),
@@ -302,11 +310,6 @@
   }
 }
 @media (max-width: $media-sm) {
-  .title {
-    font-size: 26px;
-    margin-bottom: 0;
-  }
-
   .topContentItem {
     h3 {
       font-size: 20px;
