--- a/components/ClvFeatures/CloverFeature.module.scss
+++ b/components/ClvFeatures/CloverFeature.module.scss
@@ -74,23 +74,44 @@
   width: 100%;
   min-height: 138px;
   color: var(--color-accent);
-  line-height: 55px;
-  font-size: 40px;
-  padding: 0 150px;
+  line-height: 60px;
+  font-size: 54px;
+
+  @media (max-width: $media-md) {
+    line-height: 54px;
+    font-size: 48px;
+  }
+
+  @media (max-width: $media-sm) {
+    line-height: 30px;
+    font-size: 30px;
+  }
 }
 
 .topContent {
-  width: 1230px;
+  max-width: 1230px;
   display: flex;
   flex-direction: row;
   margin: 0 auto;
-  padding: 96px 0 187px;
+  padding-top: 90px;
 
   & > div {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    flex-direction: column;
     background: var(--feature-background);
+  }
+
+  @media (max-width: $media-md) {
+    width: 100%;
+    padding: 0 21px;
+    padding-top: 90px;
+  }
+
+  @media (max-width: $media-sm) {
+    width: 100%;
+    padding: 0 12px;
+    padding-top: 48px;
   }
 }
 
@@ -101,20 +122,30 @@
   color: #fff;
   font-family: Roboto, sans-serif;
   text-align: left;
-  margin-top: 70px;
   position: relative;
   background: rgba(255, 255, 255, 0.05);
   border-radius: 30px;
+  margin-bottom: 24px;
   padding: 30px;
+  cursor: pointer;
 
   h3 {
     font-family: Gilroy-SemiBold;
     font-size: 26px;
     line-height: 30px;
-    margin-bottom: 24px;
+    margin-bottom: 36px;
     width: 100%;
     text-align: left;
     color: var(--color-background);
+    z-index: 2;
+
+    @media (max-width: $media-md) {
+      margin-bottom: 24px;
+    }
+
+    @media (max-width: $media-sm) {
+      margin-bottom: 23px;
+    }
   }
 
   p {
@@ -122,6 +153,7 @@
     line-height: 24px;
     font-family: Gilroy-Medium;
     color: var(--color-background);
+    z-index: 2;
   }
 
   a,
@@ -150,8 +182,9 @@
 
   img {
     position: absolute;
-    width: 80%;
+    width: 85%;
     margin-top: 20px;
+    z-index: 1;
   }
 
   &.hovered {
@@ -166,13 +199,81 @@
       opacity: 0.4;
     }
   }
+
+  .bar {
+    background: var(--color-accent);
+    width: 48px;
+    height: 3px;
+    margin-top: 30px;
+
+    @media (max-width: $media-md) {
+      margin-top: 24px;
+    }
+
+    @media (max-width: $media-sm) {
+      margin-top: 23px;
+    }
+  }
+
+  @media (max-width: $media-md) {
+    margin: 0;
+    margin-bottom: 18px;
+    width: 49%;
+    flex-wrap: nowrap !important;
+
+    h3 {
+      font-size: 21px;
+      line-height: 24px;
+    }
+
+    button {
+      position: relative;
+      margin-top: 30px;
+    }
+
+    p {
+      max-height: 60%;
+      overflow: auto;
+    }
+  }
+
+  @media (max-width: $media-sm) {
+    animation: none;
+    position: sticky;
+    top: 0;
+    margin-left: auto;
+    margin-right: auto;
+    width: calc(100% - 24px);
+    height: 100%;
+    margin-top: 20px;
+    background: linear-gradient(
+        0deg,
+        rgba(255, 255, 255, 0.05),
+        rgba(255, 255, 255, 0.05)
+      ),
+      #151e26;
+
+    h3 {
+      font-size: 20px;
+      margin-bottom: 15px;
+    }
+
+    p {
+      line-height: 25px;
+    }
+
+    p,
+    button {
+      font-size: 14px;
+    }
+  }
 }
 
 .itemBack {
   width: auto;
-  height: 178px;
+  height: 185px;
   margin-top: 0 !important;
-  top: 50%;
+  top: 55%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -187,12 +288,24 @@
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  padding: 96px 0 50px;
+  padding-top: 150px;
 
   & > div {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
+  }
+
+  @media (max-width: $media-md) {
+    padding-top: 120px;
+
+    > div {
+      flex-wrap: wrap;
+    }
+  }
+
+  @media (max-width: $media-sm) {
+    padding-top: 90px;
   }
 }
 
@@ -298,39 +411,6 @@
 
   .topContent,
   .clvToken {
-    width: 80%;
-
-    & > div {
-      justify-content: center;
-    }
-  }
-
-  .topContentItem {
-    width: 354px;
-    margin: 10px 6px;
-
-    h3 {
-      font-size: 21px;
-      line-height: 24px;
-    }
-
-    button {
-      position: relative;
-      margin-top: 30px;
-    }
-  }
-
-  .featureContent {
-    width: calc(100% - 40px);
-
-    > div {
-      justify-content: center;
-      margin-top: 90px;
-
-      @media (max-width: $media-sm) {
-        margin-top: 48px;
-      }
-    }
   }
 
   .title {
@@ -341,15 +421,6 @@
       //line-height: 46px;
       //font-size: 40px;
     }
-  }
-
-  .typing {
-    width: 100%;
-    height: auto;
-    min-height: 110px;
-    line-height: 55px;
-    font-size: 40px;
-    padding: 0;
   }
 }
 
@@ -362,22 +433,10 @@
 @media (max-width: $media-sm) {
   .title {
     font-size: 30px;
-    margin-bottom: 15px;
     & > span {
       line-height: 63px;
       font-size: 30px;
     }
-  }
-
-  .typing {
-    font-size: 30px;
-    line-height: 30px;
-    min-height: 60px;
-  }
-
-  .featureContent {
-    padding-top: 30px;
-    padding-bottom: 0;
   }
 
   .topContent {
@@ -386,34 +445,5 @@
     height: 400px;
     padding: 0;
     overflow: auto;
-  }
-
-  .topContentItem {
-    animation: none;
-    position: sticky;
-    top: 0;
-    margin: 0;
-    height: 100%;
-    margin-top: 20px;
-    background: linear-gradient(
-        0deg,
-        rgba(255, 255, 255, 0.05),
-        rgba(255, 255, 255, 0.05)
-      ),
-      #151e26;
-
-    h3 {
-      font-size: 20px;
-      margin-bottom: 15px;
-    }
-
-    p {
-      line-height: 25px;
-    }
-
-    p,
-    button {
-      font-size: 14px;
-    }
   }
 }
