--- a/components/ClvToken/index.module.scss
+++ b/components/ClvToken/index.module.scss
@@ -2,14 +2,26 @@
 
 .wrapper {
   width: 100%;
+  max-width: 1230px;
   position: relative;
   background: var(--color-background);
-  margin-top: 90px;
-  padding: 90px 0;
+  margin-top: 126px;
+  padding: 90px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   box-sizing: border-box;
   box-shadow: 0px 12px 30px rgba(0, 0, 0, 0.15);
-  border-radius: 54px;
+  border-radius: 30px;
+
+  @media (max-width: $media-md) {
+    padding: 60px;
+    margin-top: 102px;
+  }
+
+  @media (max-width: $media-md) {
+    padding: 48px 24px;
+    margin-top: 72px;
+    border-radius: 24px;
+  }
 }
 
 .line {
@@ -49,12 +61,27 @@
 
 .clvTokenTitle {
   color: var(--color-text);
-  margin-top: 24px;
   font-family: Gilroy-SemiBold;
   font-size: 80px;
   line-height: 80px;
   text-align: center;
   letter-spacing: -2px;
+
+  @media (max-width: $media-md) {
+    font-size: 70px;
+    line-height: 70px;
+  }
+
+  @media (max-width: $media-sm) {
+    font-size: 26px;
+    margin-bottom: 15px;
+
+    p {
+      margin-top: 12px;
+      line-height: 0;
+      font-size: 40px;
+    }
+  }
 }
 
 .clvTokenList {
@@ -64,14 +91,14 @@
 }
 
 .clvTokenItem {
-  width: 359px;
+  width: 33%;
   height: 251px;
   padding: 29px 29px 0;
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 33px;
+  margin-top: 40px;
 
   div {
     margin-top: 25px;
@@ -101,26 +128,18 @@
       stroke: var(--color-accent);
     }
   }
-}
+  @media (max-width: $media-md) {
+    width: 50%;
+  }
 
-@media (max-width: 935px) {
-  .topContent,
-  .featureContent,
-  .clvToken {
-    width: 80%;
-
-    & > div {
-      //margin: 0 20px;
-      justify-content: center;
-    }
+  @media (max-width: $media-sm) {
+    width: 100%;
   }
 }
 
-@media (max-width: $media-lg) {
+@media (max-width: $media-md) {
   .wrapper {
-    padding-top: 62px;
-    padding-bottom: 60px;
-    width: calc(100% - 40px);
+    width: calc(100% - 42px);
     margin-left: auto;
     margin-right: auto;
   }
@@ -143,11 +162,6 @@
       margin-top: 30px;
     }
   }
-
-  .clvTokenTitle {
-    font-size: 70px;
-    line-height: 70px;
-  }
 }
 
 @media (max-width: $media-xs), (max-width: $media-sm) {
@@ -161,17 +175,6 @@
 
   .bottomWrapper {
     margin-top: 0;
-  }
-
-  .clvTokenTitle {
-    font-size: 26px;
-    margin-bottom: 15px;
-
-    p {
-      margin-top: 12px;
-      line-height: 0;
-      font-size: 40px;
-    }
   }
 
   .clvTokenIcon {
