--- a/components/StrategicPartners/StrategicPartners.module.scss
+++ b/components/StrategicPartners/StrategicPartners.module.scss
@@ -49,15 +49,24 @@
     z-index: 0;
   }
 
+  &:hover {
+    cursor: pointer;
+    &::before {
+      background: rgba(255, 255, 255, 0.15);
+    }
+  }
+
   img {
     max-height: 60px;
     z-index: 10;
   }
-}
 
-@media (min-width: $media-md) {
-  .logo {
+  @media (max-width: $media-md) {
     height: 100px;
+  }
+
+  @media (max-width: $media-sm) {
+    width: 45%;
   }
 }
 
