--- a/components/Introduction/Introduction.module.scss
+++ b/components/Introduction/Introduction.module.scss
@@ -127,6 +127,12 @@
   }
 }
 
+.launchSakura {
+  &:after {
+    background: transparent;
+  }
+}
+
 .textOuter {
   margin-top: 400px;
   max-width: 777px;
