--- a/components/Blog/Blog.module.scss
+++ b/components/Blog/Blog.module.scss
@@ -4,7 +4,6 @@
   padding: 120px 20px;
   width: 100%;
   position: relative;
-  margin-top: 120px;
 
   // &::before {
   //   content: url('../../public/images/blog-bg.png');
@@ -53,12 +52,14 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  flex-wrap: wrap;
   width: 100%;
   margin-top: 48px;
+  flex-wrap: nowrap !important;
+  overflow: auto;
 
   @media (max-width: $media-md) {
     margin-top: 36px;
+    flex-wrap: nowrap !important;
   }
 
   @media (max-width: $media-sm) {
@@ -72,8 +73,15 @@
   margin: 20px 0 0 0;
   width: 100%;
   z-index: 1;
+  min-width: 282px;
 
   @media (max-width: $media-sm) {
+    margin-top: 0;
+    margin-right: 12px;
+    min-width: 282px;
+  }
+
+  @media (max-width: $media-md) {
     margin-top: 0;
     margin-right: 12px;
     min-width: 282px;
