--- a/components/CloverDnaAndFeature/CloverDNA.module.scss
+++ b/components/CloverDnaAndFeature/CloverDNA.module.scss
@@ -2,7 +2,7 @@
 
 .wrapper {
   max-width: 1230px;
-  width: auto;
+  width: 100%;
   margin: auto;
   position: relative;
   padding: 102px;
@@ -146,7 +146,7 @@
   }
 
   @media (max-width: $media-sm) {
-    padding: 42px 0;
+    padding: 42px 0 12px 0;
   }
 
   h3 {
@@ -179,7 +179,7 @@
     font-size: 18px;
     line-height: 18px;
     margin-top: 36px;
-    box-shadow: 0px 12px 36px var(--btn-shadow);
+    box-shadow: 0px 0 36px var(--btn-shadow);
   }
 
   @media (max-width: $media-lg) {
