--- a/components/Navigation/Navigation.module.scss
+++ b/components/Navigation/Navigation.module.scss
@@ -129,16 +129,23 @@
     color: $color-text;
     overflow: hidden;
     text-align: left;
-    padding: 18px 24px;
+    padding: 6px;
 
     li a {
-      display: block;
+      display: flex;
+      align-items: center;
       white-space: nowrap;
       min-width: 160px;
-      line-height: 40px;
+      height: 42px;
+
       &:hover {
-        color: $color-hover;
+        background-color: rgba(45, 67, 89, 0.1);
+        border-radius: 9px;
       }
+    }
+
+    a {
+      padding: 0 18px;
     }
 
     li {
@@ -217,6 +224,11 @@
     i {
       height: 24px;
       width: 24px;
+
+      svg {
+        width: 100%;
+        height: 100%;
+      }
     }
   }
 
@@ -235,6 +247,7 @@
     background: white;
 
     h1 {
+      display: block;
       margin-top: 90px;
       font-family: Gilroy-SemiBold;
       font-size: 40px;
@@ -266,11 +279,16 @@
   .item {
     margin-top: 48px;
     font-size: 18px;
+    padding: 0;
 
     &:last-child {
       .links {
         text-align: left;
       }
+    }
+
+    li {
+      height: 32px;
     }
 
     & > div {
@@ -343,21 +361,22 @@
       color: #fff;
       overflow: hidden;
       text-align: left;
-      padding: 18px 24px;
+      padding: 6px;
 
       li a {
-        display: block;
+        display: flex;
+        align-items: center;
         white-space: nowrap;
         min-width: 160px;
-        padding-bottom: 24px;
+        padding-bottom: 0;
         font-family: Gilroy-Medium;
         font-size: 16px;
         line-height: 18px;
         color: #171f26;
+      }
 
-        &:hover {
-          color: $color-hover;
-        }
+      a {
+        padding: 0 18px;
       }
     }
   }
