--- a/components/Introduction/Introduction.module.scss
+++ b/components/Introduction/Introduction.module.scss
@@ -196,6 +196,10 @@
     height: 48px;
     border-radius: 10px;
   }
+
+  &:hover {
+    background: rgba(255, 255, 255, 0.1);
+  }
 }
 
 @media (max-width: $media-lg) {
