--- a/components/Introduction/Introduction.module.scss
+++ b/components/Introduction/Introduction.module.scss
@@ -157,13 +157,16 @@
   background: #000000;
   box-shadow: 0px 12px 36px rgba(76, 191, 122, 0.08);
   border-radius: 12px;
-  margin-right: 24px;
+  margin-right: 20px;
 
   @media (max-width: $media-md) {
     &:nth-child(2) {
       margin-right: 0;
     }
     &:nth-child(3) {
+      display: none;
+    }
+    &:nth-child(4) {
       display: none;
     }
     &:last-child {
